--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #797979;
+  background-color: #d1d1d1;
 }
 
 code {
